// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.c32 {
  position: relative;
  display: inline-block;
}

.c33 {
  position: absolute;
}

.c34 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c10 {
  vertical-align: baseline;
}

.c30 {
  margin-right: 8px;
  font-size: 14px;
}

.c28 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c28 .c29 {
  color: #3555f6;
}

.c31 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c26 {
  position: relative;
  margin-bottom: -8px;
}

.c26 .c27,
.c26 .style__RadioTagWrap-sc-25j3mq-3,
.c26 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c26 .c27:last-child,
.c26 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c26 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c26 .c36+.c36 {
  margin-left: -1px;
}

.c26 .c35 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c26 .c35:first-child {
  border-radius: 2px 0 0 2px;
}

.c26 .c35:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c6 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c6 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c6 input:focus {
  border-color: #4683e6;
  background-color: #f6f6fb;
}

.c6 input:disabled,
.c6 input[disabled] {
  box-shadow: none;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 .c37 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

.c13 {
  position: relative;
}

.c15 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c9 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #dfe0f1;
  padding-right: 22px;
  border-right-width: 0;
}

.c7 .c14 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7 .c14::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7 .c14::-moz-placeholder {
  color: #abb4c3;
}

.c7 .c14:-ms-input-placeholder {
  color: #abb4c3;
}

.c7 .c14::placeholder {
  color: #abb4c3;
}

.c7:hover {
  border-color: #c3cad9;
}

.c7 .c12 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c7 .c12:hover {
  background: #f6f6fb;
}

.c7 .c14 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c7 .c8,
.c7 .c11 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c7 .c8:hover,
.c7 .c11:hover {
  color: #3555f6;
}

.c7 .c8 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c7 .c11 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c18 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c20 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c25 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c16 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c16:hover {
  border-color: #4683e6;
}

.c16 .c22 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c16 .c24 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c16 .c17 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c16 .c19,
.c16 .c21 {
  line-height: 16px;
}

.c16 .c19 {
  padding-right: 20px;
}

.c16 .c21 {
  padding-left: 20px;
}

.c16 .c19 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <span
          class="uc-fe-input c6"
        >
          <input
            value="1"
          />
        </span>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        maxValue
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c7"
        >
          <div>
            <span
              class="c8 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c10"
                type="caret-up"
              />
            </span>
            <span
              class="c11 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c9"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c10"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="c12 uc-fe-numberinput-input-wrap c13"
          >
            <input
              autocomplete="off"
              class="c14 uc-fe-numberinput-input c15"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        dot
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c16"
        >
          <div
            class="c17 c18"
          >
            <span
              class="c19 c20"
            >
              ON
            </span>
            <span
              class="c21 c20"
            >
              OFF
            </span>
            <span
              class="c22 c23"
            >
              <span
                class="c24 c25"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c16"
        >
          <div
            class="c17 c18"
          >
            <span
              class="c19 c20"
            >
              ON
            </span>
            <span
              class="c21 c20"
            >
              OFF
            </span>
            <span
              class="c22 c23"
            >
              <span
                class="c24 c25"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        noneContent
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c16"
        >
          <div
            class="c17 c18"
          >
            <span
              class="c19 c20"
            >
              ON
            </span>
            <span
              class="c21 c20"
            >
              OFF
            </span>
            <span
              class="c22 c23"
            >
              <span
                class="c24 c25"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c26"
        >
          <div
            checked=""
            class="c27 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c28"
          >
            <i
              class="c29 c30 uc-fe-icon icon__cbox-ed c10"
              type="cbox-ed"
            />
            topRight
          </div>
          <div
            class="c27 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c31"
          >
            <i
              class="c29 c30 uc-fe-icon icon__circle c10"
              type="circle"
            />
            topLeft
          </div>
          <div
            class="c27 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c31"
          >
            <i
              class="c29 c30 uc-fe-icon icon__circle c10"
              type="circle"
            />
            bottomRight
          </div>
          <div
            class="c27 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c31"
          >
            <i
              class="c29 c30 uc-fe-icon icon__circle c10"
              type="circle"
            />
            bottomLeft
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-badge c32"
      style="margin:10px;"
    >
      <div
        style="width:50px;height:50px;background:#ddd;"
      />
      <div
        class="uc-fe-badge-badge-wrap c33"
      >
        <span
          class="uc-fe-badge-badge c34"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c3 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
        style="background:white;color:black;border:1px solid #ddd;"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge-dot c3 uc-fe-badge-badge c2"
        style="background:blue;"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        <span
          style="font-weight:bolder;"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c3 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge-dot c3 uc-fe-badge-badge c2"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <span
      class="uc-fe-badge-badge c2"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
